RESOLVED FIXED203033
[iOS] Stop terminating the prewarmed process on application suspension
https://bugs.webkit.org/show_bug.cgi?id=203033
Summary [iOS] Stop terminating the prewarmed process on application suspension
Chris Dumez
Reported 2019-10-16 08:19:20 PDT
Stop terminating the prewarmed process on application suspension. Having no prewarmed process when the application resumes means the next cross-site load will be significantly slower. If the system needs memory, this process can be jetsammed.
Attachments
Patch (1.62 KB, patch)
2019-10-16 08:21 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-16 08:21:05 PDT
WebKit Commit Bot
Comment 2 2019-10-16 12:22:45 PDT
Comment on attachment 381070 [details] Patch Clearing flags on attachment: 381070 Committed r251195: <https://trac.webkit.org/changeset/251195>
WebKit Commit Bot
Comment 3 2019-10-16 12:22:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-10-16 12:23:18 PDT
Note You need to log in before you can comment on or make changes to this bug.