[iOS] Stop terminating the prewarmed process on application suspension https://bugs.webkit.org/show_bug.cgi?id=203033

Reviewed by Alex Christensen.

Stop terminating the prewarmed process on application suspension. Having no prewarmed process when the
application resumes means the next cross-site load will be significantly slower. If the system needs
memory, this process can be jetsammed.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::applicationIsAboutToSuspend):


Canonical link: https://commits.webkit.org/216471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251195 268f45cc-cd09-0410-ab3c-d52691b4dbfc